<resources>
    <string name="app_name">droidcon</string>
    <string name="schedule">Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="search">Search</string>
    <string name="my_favorites">My favorites</string>
    <string name="stages">Stages</string>
    <string name="types">Types</string>
    <string name="filter">Filter</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="search_hint">Search…</string>
    <string name="level">Level</string>
    <string name="clear_filter">Clear filter</string>
</resources>
