<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_space"
    tools:context=".ui.schedule.filter.FilterFragment">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/filter"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/closeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/closeButton" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_outline_keyboard_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hellmund.droidcon2019.ui.schedule.filter.FilterChip
        android:id="@+id/favoritesChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:text="@string/my_favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView" />

    <TextView
        android:id="@+id/stagesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="@dimen/small_space"
        android:fontFamily="sans-serif-medium"
        android:text="@string/stages"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/stagesChipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoritesChip" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/stagesChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        app:chipSpacing="@dimen/small_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stagesHeader" />

    <TextView
        android:id="@+id/typesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="@dimen/small_space"
        android:fontFamily="sans-serif-medium"
        android:text="@string/types"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/typesChipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stagesChipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/typesChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        app:chipSpacing="@dimen/small_space"
        app:layout_constraintBottom_toTopOf="@id/levelHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typesHeader" />

    <TextView
        android:id="@+id/levelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="@dimen/small_space"
        android:fontFamily="sans-serif-medium"
        android:text="@string/level"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/levelChipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typesChipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/levelChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        app:chipSpacing="@dimen/small_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>